Up z-index of title-bar to prevent image overlap

--- a/web/src/chrome/page.css
+++ b/web/src/chrome/page.css
@@ -11,6 +11,7 @@
   display: flex;
   padding: 1rem;
   border-bottom: 1px solid black;
+  z-index: 1;
 }
 .chrome-page-title-bar-middle {
   text-align: center;
